--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -1,31 +1,15 @@
 {
-  "name": "@design-system-rte/angular",
-  "version": "0.1.1-rc1",
+  "name": "@design-system-rte/angular-builder",
+  "version": "0.1.1-rc3",
   "scripts": {
     "ng": "ng",
-    "build": "echo \"No build for Angular package\" && exit 0",
-    "storybook": "ng run angular:storybook --port 7007",
-    "build-storybook": "ng run angular:build-storybook --output-dir ../design-docs/storybook-static/angular --config-dir .storybook",
+    "build": "ng build ds-rte-lib",
+    "publish": "npm publish ./dist/lib --access public",
+    "build:publish": "npm run build && npm run publish",
+    "storybook": "ng run ds-rte-lib:storybook --port 7007",
+    "build-storybook": "ng run ds-rte-lib:build-storybook --output-dir ../design-docs/storybook-static/angular --config-dir .storybook",
     "test:ci": "npx playwright install && npx start-server-and-test storybook http://localhost:7007 test",
     "test": "test-storybook --url http://localhost:7007"
-  },
-  "description": "Angular components for the Design System RTE",
-  "publishConfig": {
-    "access": "public"
-  },
-  "dependencies": {
-    "@angular/animations": "^17.3.0",
-    "@angular/common": "^17.3.0",
-    "@angular/compiler": "^17.3.0",
-    "@angular/core": "^17.3.0",
-    "@angular/forms": "^17.3.0",
-    "@angular/platform-browser": "^17.3.0",
-    "@angular/platform-browser-dynamic": "^17.3.0",
-    "@angular/router": "^17.3.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.3",
-    "@design-system-rte/core": "^0.1.2-rc2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.12",
@@ -49,6 +33,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "ng-packagr": "^17.3.0",
     "storybook": "^8.6.6",
     "typescript": "~5.4.2"
   }
