--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@design-system-rte/angular-builder",
-  "version": "0.1.1-rc3",
+  "version": "0.1.1",
   "scripts": {
     "ng": "ng",
     "build": "ng build ds-rte-lib",
