--- a/packages/angular/projects/ds-rte-lib/package.json
+++ b/packages/angular/projects/ds-rte-lib/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@design-system-rte/angular",
-  "version": "0.2.0-rc2",
+  "version": "0.2.0",
   "description": "Angular components for the Design System RTE",
   "peerDependencies": {
     "@angular/common": "^17.3.0",
     "@angular/core": "^17.3.0"
   },
   "dependencies": {
-    "@design-system-rte/core": "^0.1.2-rc3",
+    "@design-system-rte/core": "^0.1.2",
     "tslib": "^2.3.0"
   },
   "sideEffects": false
