--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@design-system-rte/react",
-  "version": "0.1.1-rc2",
+  "version": "0.1.1",
   "type": "module",
   "module": "dist/react-package.js",
   "main": "dist/react-package.cjs",
@@ -24,7 +24,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@design-system-rte/core": "^0.1.0",
+    "@design-system-rte/core": "^0.2.0",
     "@testing-library/jest-dom": "^6.6.3",
     "clsx": "^2.1.1",
     "react": ">=18.0.0",
@@ -71,7 +71,6 @@
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.1",
     "vite-plugin-dts": "^4.5.3",
-    "vite-plugin-lib-inject-css": "^2.2.2",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.0.8"
   },
