--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@design-system-rte/angular-builder",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "scripts": {
     "ng": "ng",
     "build": "ng build ds-rte-lib",
@@ -15,17 +15,18 @@
     "@angular-devkit/build-angular": "^17.3.12",
     "@angular/cli": "^17.3.12",
     "@angular/compiler-cli": "^17.3.0",
-    "@design-system-rte/core": "^0.2.0",
+    "@angular/forms": "^17.3.12",
+    "@angular/platform-browser-dynamic": "^17.3.12",
     "@chromatic-com/storybook": "^3.2.6",
     "@compodoc/compodoc": "^1.1.26",
-    "@storybook/addon-a11y": "^8.6.6",
-    "@storybook/addon-docs": "^8.6.6",
-    "@storybook/addon-essentials": "^8.6.6",
-    "@storybook/addon-interactions": "^8.6.6",
-    "@storybook/addon-onboarding": "^8.6.6",
-    "@storybook/angular": "^8.6.6",
-    "@storybook/blocks": "^8.6.6",
-    "@storybook/test": "^8.6.6",
+    "@storybook/addon-a11y": "~8.6.0",
+    "@storybook/addon-docs": "~8.6.0",
+    "@storybook/addon-essentials": "~8.6.0",
+    "@storybook/addon-interactions": "~8.6.0",
+    "@storybook/addon-onboarding": "~8.6.0",
+    "@storybook/angular": "~8.6.0",
+    "@storybook/blocks": "~8.6.0",
+    "@storybook/test": "~8.6.0",
     "@storybook/test-runner": "^0.22.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
@@ -35,7 +36,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^17.3.0",
-    "storybook": "^8.6.6",
+    "storybook": "~8.6.0",
     "typescript": "~5.4.2"
   }
 }
