feat: use icons in checkbox component

--- a/packages/react/.svgrrc.json
+++ b/packages/react/.svgrrc.json
@@ -3,9 +3,7 @@
   "jsxRuntime": "automatic",
   "expandProps": "end",
   "dimensions": false,
-  "replaceAttrValues": {
-    "currentColor": "{fill}"
-  },
+  "svgo": false,
   "svgProps": {
     "width": "{width}",
     "height": "{height}",
