refactor: migrate Angular's tooltip component to directive

--- a/packages/angular/.storybook/tsconfig.json
+++ b/packages/angular/.storybook/tsconfig.json
@@ -3,7 +3,10 @@
   "compilerOptions": {
     "types": ["node"],
     "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "paths": {
+      "@design-system-rte/core/*": ["../../core/*"]
+    }
   },
   "exclude": ["../projects/ds-rte-lib/src/test.ts", "../projects/ds-rte-lib/src/**/*.spec.ts"],
   "include": ["../projects/ds-rte-lib/src/**/*.stories.*", "./preview.ts"],
