--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "build-design-docs": "npm --prefix packages/design-docs run build-storybook",
     "changeset": "changeset",
     "changeset:add": "changeset add",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "test:all": "npm --prefix packages/react run test && npm --prefix packages/angular run test",
     "test:angular": "npm --prefix packages/angular run test",
     "test:react": "npm --prefix packages/react run test",
@@ -23,6 +25,17 @@
   ],
   "devDependencies": {
     "@changesets/cli": "^2.28.1",
-    "@angular/cli": "^17.3.12"
+    "@angular/cli": "^17.3.12",
+    "@eslint/js": "^9.21.0",
+    "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.0.2",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "eslint-plugin-storybook": "^0.11.4",
+    "eslint-plugin-vitest": "^0.5.4",
+    "prettier": "^3.5.3"
   }
 }
