--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test:all": "npm --prefix packages/react run test && npm --prefix packages/angular run test",
     "test:angular": "npm --prefix packages/angular run test",
     "test:react": "npm --prefix packages/react run test",
-    "generate-icons": "npm --prefix packages/react run generate-icons && npm --prefix packages/angular run generate-icons"
+    "generate-icons": "npm --prefix packages/react run generate-icons && npm --prefix packages/angular run generate-icons",
+    "prepare": "husky"
   },
   "keywords": [],
   "author": "",
@@ -24,8 +25,8 @@
     "packages/*"
   ],
   "devDependencies": {
-    "@changesets/cli": "^2.28.1",
     "@angular/cli": "^17.3.12",
+    "@changesets/cli": "^2.28.1",
     "@eslint/js": "^9.21.0",
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.0.2",
@@ -36,6 +37,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-storybook": "^0.11.4",
     "eslint-plugin-vitest": "^0.5.4",
+    "husky": "^9.1.7",
     "prettier": "^3.5.3"
   }
 }
