--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -6,6 +6,19 @@ on:
       - main
 
 jobs:
+
+  debug-sonarqube
+    steps:
+    - name: Debug SONAR_TOKEN availability
+    run: |
+      if [ -z "$SONAR_TOKEN" ]; then
+        echo "SONAR_TOKEN is not set"
+      else
+        echo "SONAR_TOKEN is available (length: ${#SONAR_TOKEN})"
+      fi
+    env:
+      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
   global-install: 
     runs-on: ubuntu-latest
     steps:
