--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -9,10 +9,11 @@ permissions: read-all
 
 jobs:
 
-  debug-sonarqube
+  debug-sonarqube:
+    runs-on: ubuntu-latest
     steps:
-    - name: Debug SONAR_TOKEN availability
-    run: |
+      - name: Debug SONAR_TOKEN availability
+        run: |
       if [ -z "$SONAR_TOKEN" ]; then
         echo "SONAR_TOKEN is not set"
       else
