feat: add specific angular lint rules

--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -5,6 +5,8 @@
     "ng": "ng",
     "build": "npm run generate-icons && ng build ds-rte-lib",
     "postbuild": "cp -R projects/ds-rte-lib/src/lib/assets dist/lib/lib/assets",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "publish": "npm publish ./dist/lib --access public",
     "build:publish": "npm run build && npm run publish",
     "storybook": "ng run ds-rte-lib:storybook --port 7007",
@@ -31,6 +33,7 @@
     "@storybook/test": "~8.6.0",
     "@storybook/test-runner": "^0.22.0",
     "@types/jasmine": "~5.1.0",
+    "angular-eslint": "^19.6.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
