--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "design-system-rte",
   "version": "0.1.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "base-storybook": "npm --prefix packages/design-docs run base-storybook",
     "design-docs": "npm --prefix packages/design-docs run storybook",
@@ -9,8 +10,8 @@
     "build-design-docs": "npm --prefix packages/design-docs run build-storybook",
     "changeset": "changeset",
     "changeset:add": "changeset add",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "lint": "eslint . && npm --prefix packages/react run lint && npm --prefix packages/angular run lint",
+    "lint:fix": "eslint . --fix && npm --prefix packages/react run lint:fix && npm --prefix packages/angular run lint:fix",
     "test:all": "npm --prefix packages/react run test && npm --prefix packages/angular run test",
     "test:angular": "npm --prefix packages/angular run test",
     "test:react": "npm --prefix packages/react run test",
@@ -32,9 +33,6 @@
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-storybook": "^0.11.4",
     "eslint-plugin-vitest": "^0.5.4",
     "husky": "^9.1.7",
