--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -54,6 +54,9 @@
     "@vitejs/plugin-react-swc": "^3.8.0",
     "@vitest/browser": "^3.0.7",
     "@vitest/coverage-v8": "^3.0.7",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "jsdom": "^26.0.0",
     "sass-embedded": "^1.88.0",
