fix: add icon generation on build command

--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.3",
   "scripts": {
     "ng": "ng",
-    "build": "ng build ds-rte-lib",
+    "build": "npm run generate-icons && ng build ds-rte-lib",
     "postbuild": "cp -R projects/ds-rte-lib/src/lib/assets dist/lib/lib/assets",
     "publish": "npm publish ./dist/lib --access public",
     "build:publish": "npm run build && npm run publish",
