--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,6 +3,8 @@
   "version": "0.2.0",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm run build:css-themes",
     "build:css-themes": "ts-node css-theme-generator.ts",
