--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "base-storybook": "npm --prefix packages/design-docs run base-storybook",
     "design-docs": "npm --prefix packages/design-docs run storybook",
+    "generate:tokens": "npm --prefix packages/core run generate:tokens",
     "build-base-storybook": "npm --prefix packages/design-docs run build-base-storybook",
     "build-design-docs": "npm --prefix packages/design-docs run build-storybook",
     "changeset": "changeset",
