--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,6 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm run build:css-themes",
     "build:css-themes": "ts-node css-theme-generator.ts",
+    "generate:tokens": "ts-node ./tokens/primitives-generator.ts && ts-node ./tokens/tokens-generator.ts",
     "prepublishOnly": "npm run build"
   },
   "keywords": [],
