--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@design-system-rte/angular-builder",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "scripts": {
     "ng": "ng",
     "build": "npm run generate-icons && ng build ds-rte-lib",
@@ -13,7 +13,7 @@
     "build-storybook": "npm run generate-icons && ng run ds-rte-lib:build-storybook --output-dir ../design-docs/storybook-static/angular --config-dir .storybook",
     "test:ci": "npx playwright install && npx start-server-and-test storybook http://localhost:7007 test",
     "test": "test-storybook --url http://localhost:7007",
-    "generate-icons": "cp -R ../core/assets/icons projects/ds-rte-lib/src/lib/assets"
+    "generate-icons": "mkdir -p projects/ds-rte-lib/src/lib/assets/icons && cp -R ../core/assets/icons projects/ds-rte-lib/src/lib/assets"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.12",
