--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -48,6 +48,19 @@ jobs:
             ./packages/core/node_modules
           key: deps-node20-PR-${{ hashFiles('package-lock.json') }}-${{ github.run_id }}
 
+      - name: Cache icons
+        id: cache-icons
+        uses: actions/cache@v4
+        with:
+          path: |
+            ./packages/react/src/components/icon/generated
+            ./packages/angular/projects/ds-rte-lib/src/lib/assets/icons
+          key: icons-${{ hashFiles('package-lock.json') }}-${{ github.run_id }}
+
+      - name: Generate icons
+        run: npm run generate-icons
+
+
   quality-react:
     runs-on: ubuntu-latest
     needs: global-install
@@ -71,6 +84,14 @@ jobs:
             ./packages/angular/.vite
             ./packages/core/node_modules
           key: deps-node20-PR-${{ hashFiles('package-lock.json') }}-${{ github.run_id }}
+        
+      - name: Restore cache icons
+        uses: actions/cache@v4
+        with:
+          path: |
+            ./packages/react/src/components/icon/generated
+            ./packages/angular/projects/ds-rte-lib/src/lib/assets/icons
+          key: icons-${{ hashFiles('package-lock.json') }}-${{ github.run_id }}
 
       - name: Lint
         working-directory: packages/react
@@ -103,6 +124,14 @@ jobs:
             ./packages/angular/.vite
             ./packages/core/node_modules
           key: deps-node20-PR-${{ hashFiles('package-lock.json') }}-${{ github.run_id }}
+
+      - name: Restore cache icons
+        uses: actions/cache@v4
+        with:
+          path: |
+            ./packages/react/src/components/icon/generated
+            ./packages/angular/projects/ds-rte-lib/src/lib/assets/icons
+          key: icons-${{ hashFiles('package-lock.json') }}-${{ github.run_id }}
 
       - name: Lint
         working-directory: packages/angular
