--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.5",
   "scripts": {
     "ng": "ng",
-    "build": "npm run generate-icons && ng build ds-rte-lib",
-    "postbuild": "cp -R projects/ds-rte-lib/src/lib/assets dist/lib/lib/assets",
+    "build": "ng build ds-rte-lib && npm run copy-build-icons",
+    "copy-build-icons": "cp -R projects/ds-rte-lib/src/lib/assets dist/lib/lib/assets",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "publish": "npm publish ./dist/lib --access public",
     "build:publish": "npm run build && npm run publish",
     "storybook": "ng run ds-rte-lib:storybook --port 7007",
-    "build-storybook": "npm run generate-icons && ng run ds-rte-lib:build-storybook --output-dir ../design-docs/storybook-static/angular --config-dir .storybook",
+    "build-storybook": "ng run ds-rte-lib:build-storybook --output-dir ../design-docs/storybook-static/angular --config-dir .storybook",
     "test:ci": "npx playwright install && npx start-server-and-test storybook http://localhost:7007 test",
     "test": "test-storybook --url http://localhost:7007",
     "generate-icons": "mkdir -p projects/ds-rte-lib/src/lib/assets/icons && cp -R ../core/assets/icons projects/ds-rte-lib/src/lib/assets"
