--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -9,14 +9,14 @@
     "dist"
   ],
   "scripts": {
-    "build": "npm run generate-icons && tsc -b && vite build",
+    "build": "tsc -b && vite build",
     "generate-icons": "npx @svgr/cli -d ./src/components/icon/generated ../core/assets/icons --no-prettier --template template.js && npm run lint:fix",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write 'src/**/*.{ts,tsx,js,jsx}'",
     "storybook": "storybook dev -p 7008",
-    "build-storybook": "npm run generate-icons && storybook build -o ../design-docs/storybook-static/react",
-    "test:ci": "npm run generate-icons && npx playwright install && npx start-server-and-test storybook http://localhost:7008 test",
+    "build-storybook": "storybook build -o ../design-docs/storybook-static/react",
+    "test:ci": "npx playwright install && npx start-server-and-test storybook http://localhost:7008 test",
     "test": "test-storybook --url http://localhost:7008",
     "prepublishOnly": "npm run build"
   },
