--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -30,7 +30,7 @@ jobs:
             ./packages/react/.vite
             ./packages/angular/node_modules
             ./packages/angular/.vite
-          key: deps-node20-main-${{ hashFiles('package-lock.json') }}-${{ github.run_id }}
+          key: deps-node20-main-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
           restore-keys: |
             deps-node20-main-
 
@@ -44,7 +44,7 @@ jobs:
           path: |
             ./packages/react/src/components/icon/generated
             ./packages/angular/projects/ds-rte-lib/src/lib/assets/icons
-          key: icons-${{ hashFiles('package-lock.json') }}-${{ github.run_id }}
+          key: icons-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
 
       - name: Generate icons
         run: npm run generate-icons
@@ -71,7 +71,7 @@ jobs:
             ./packages/react/.vite
             ./packages/angular/node_modules
             ./packages/angular/.vite
-          key: deps-node20-main-${{ hashFiles('package-lock.json') }}-${{ github.run_id }}
+          key: deps-node20-main-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
           restore-keys: |
             deps-node20-main-
 
@@ -81,7 +81,7 @@ jobs:
           path: |
             ./packages/react/src/components/icon/generated
             ./packages/angular/projects/ds-rte-lib/src/lib/assets/icons
-          key: icons-${{ hashFiles('package-lock.json') }}-${{ github.run_id }}
+          key: icons-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
 
       - name: Lint
         working-directory: packages/react
@@ -112,7 +112,7 @@ jobs:
             ./packages/react/.vite
             ./packages/angular/node_modules
             ./packages/angular/.vite
-          key: deps-node20-main-${{ hashFiles('package-lock.json') }}-${{ github.run_id }}
+          key: deps-node20-main-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
           restore-keys: |
             deps-node20-main-
       
@@ -122,7 +122,7 @@ jobs:
           path: |
             ./packages/react/src/components/icon/generated
             ./packages/angular/projects/ds-rte-lib/src/lib/assets/icons
-          key: icons-${{ hashFiles('package-lock.json') }}-${{ github.run_id }}
+          key: icons-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
           restore-keys: |
             icons
       
@@ -158,7 +158,7 @@ jobs:
             ./packages/react/.vite
             ./packages/angular/node_modules
             ./packages/angular/.vite
-          key: deps-node20-main-${{ hashFiles('package-lock.json') }}-${{ github.run_id }}
+          key: deps-node20-main-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
           restore-keys: |
             deps-node20-main-
 
@@ -168,7 +168,7 @@ jobs:
           path: |
             ./packages/react/src/components/icon/generated
             ./packages/angular/projects/ds-rte-lib/src/lib/assets/icons
-          key: icons-${{ hashFiles('package-lock.json') }}-${{ github.run_id }}
+          key: icons-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
             
       - name: Lint
         working-directory: packages/react
@@ -199,7 +199,7 @@ jobs:
             ./packages/react/.vite
             ./packages/angular/node_modules
             ./packages/angular/.vite
-          key: deps-node20-main-${{ hashFiles('package-lock.json') }}-${{ github.run_id }}
+          key: deps-node20-main-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
           restore-keys: |
             deps-node20-main-
     
@@ -209,7 +209,7 @@ jobs:
           path: |
             ./packages/react/src/components/icon/generated
             ./packages/angular/projects/ds-rte-lib/src/lib/assets/icons
-          key: icons-${{ hashFiles('package-lock.json') }}-${{ github.run_id }}
+          key: icons-${{ hashFiles('package-lock.json') }}-${{ github.sha }}
 
       - name: Build project
         working-directory: packages/angular
