--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@design-system-rte/core",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest run",
     "build": "npm run build:css-themes",
     "build:css-themes": "ts-node css-theme-generator.ts",
-    "generate:tokens": "ts-node ./tokens/primitives-generator.ts && ts-node ./tokens/tokens-generator.ts",
+    "generate:tokens": "ts-node ./design-tokens/script.ts",
     "prepublishOnly": "npm run build"
   },
   "keywords": [],
@@ -24,6 +24,7 @@
   "devDependencies": {
     "sass": "^1.89.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vitest": "^3.2.4"
   }
 }
