--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:angular": "npm --prefix packages/angular run test",
     "test:react": "npm --prefix packages/react run test",
     "generate-icons": "npm --prefix packages/react run generate-icons && npm --prefix packages/angular run generate-icons",
-    "prepare": "husky"
+    "prepare": "husky",
+    "build:all": "npm --prefix packages/react run build && npm --prefix packages/angular run build"
   },
   "keywords": [],
   "author": "",
