--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -21,6 +21,9 @@
     "@angular/compiler-cli": "^17.3.12",
     "@angular/forms": "^17.3.12",
     "@angular/platform-browser-dynamic": "^17.3.12",
+    "@babel/core": "^7.27.4",
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-react": "^7.27.1",
     "@chromatic-com/storybook": "^3.2.6",
     "@compodoc/compodoc": "^1.1.26",
     "@storybook/addon-a11y": "~8.6.0",
