--- a/packages/design-docs/package.json
+++ b/packages/design-docs/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "storybook": "storybook dev -p 7006",
-    "base-storybook": "npm --prefix ../angular run storybook & npm --prefix ../react run storybook",
+    "base-storybook": "npm --prefix ../angular run storybook && npm --prefix ../react run storybook",
     "build-base-storybook": "npm --prefix ../angular run build-storybook && npm --prefix ../react run build-storybook",
     "build-storybook": "storybook build"
   },
