fix: added tsx comprehension in angular storybook

--- a/packages/angular/.storybook/tsconfig.json
+++ b/packages/angular/.storybook/tsconfig.json
@@ -4,11 +4,12 @@
     "types": ["node"],
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
+    "jsx": "react-jsx",
     "paths": {
       "@design-system-rte/core/*": ["../../core/*"]
     }
   },
   "exclude": ["../projects/ds-rte-lib/src/test.ts", "../projects/ds-rte-lib/src/**/*.spec.ts"],
-  "include": ["../projects/ds-rte-lib/src/**/*.stories.*", "./preview.ts"],
+  "include": ["../projects/ds-rte-lib/src/**/*.stories.*", "./preview.ts", "./template/**/*"],
   "files": ["./typings.d.ts"]
 }
