--- a/packages/angular/angular.json
+++ b/packages/angular/angular.json
@@ -73,7 +73,8 @@
             ],
             "styles": [
               "@design-system-rte/core/design-tokens/main.scss",
-              ".storybook/preview.scss"
+              ".storybook/preview.scss",
+              ".storybook/main.scss"
             ],
             "port": 6006
           }
