--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -45,5 +45,8 @@
     "ng-packagr": "^17.3.0",
     "storybook": "~8.6.0",
     "typescript": "~5.4.2"
+  },
+  "dependencies": {
+    "@babel/preset-typescript": "^7.27.1"
   }
 }
