feat: add script to tag releases

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test-bundle:react": "npm --prefix test-apps/react run dev",
     "changeset": "changeset",
     "changeset:add": "changeset add",
+    "tag-release": "node scripts/generate-release-tag.js",
     "lint": "eslint . && npm --prefix packages/react run lint && npm --prefix packages/angular run lint",
     "lint:fix": "eslint . --fix && npm --prefix packages/react run lint:fix && npm --prefix packages/angular run lint:fix",
     "test:all": "npm --prefix packages/react run test && npm --prefix packages/angular run test",
