chore: set proper licenses for published packages in npm

--- a/packages/angular/projects/ds-rte-lib/package.json
+++ b/packages/angular/projects/ds-rte-lib/package.json
@@ -2,6 +2,7 @@
   "name": "@design-system-rte/angular",
   "version": "0.4.5",
   "description": "Angular components for the Design System RTE",
+  "license": "Apache-2.0",
   "publishConfig": {
     "access": "public"
   },
