--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,7 +13,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "description": "Design Tokens, interfaces and utilities for the Design System RTE",
   "publishConfig": {
     "access": "public"
