--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -22,7 +22,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "description": "",
   "dependencies": {
     "@design-system-rte/core": "^0.6.0",
