feat: update HeaderComponent to use local image imports and add typings for image and style modules
fix: reorder imports in HeaderComponent for consistency and add newline at end of typings.d.ts

feat: update UtilisationExemple component to use img prop and import placeholder image for demonstration

WIP: modified styl to adjust img size

WIP: add main.scss to Storybook styles for improved theming

WIP: update HeaderComponent and UtilisationExemple to use local image imports; add new icon assets

style: format IconTitle component for improved readability

--- a/packages/angular/angular.json
+++ b/packages/angular/angular.json
@@ -86,7 +86,8 @@
             "browserTarget": "ds-rte-lib:build",
             "styles": [
               "@design-system-rte/core/design-tokens/main.scss",
-              ".storybook/preview.scss"
+              ".storybook/preview.scss",
+              ".storybook/main.scss"
             ],
             "compodoc": true,
             "compodocArgs": [
