--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "base-storybook": "npm --prefix packages/design-docs run base-storybook",
     "design-docs": "npm --prefix packages/design-docs run storybook",
     "generate:tokens": "npm --prefix packages/core run generate:tokens",
+    "generate:icons": "npm --prefix packages/react run generate-icons && npm --prefix packages/angular run generate-icons  && npm run lint:fix",
     "build-base-storybook": "npm --prefix packages/design-docs run build-base-storybook",
     "build-design-docs": "npm --prefix packages/design-docs run build-storybook",
     "bundle-packages": "node scripts/bundle-packages.js",
@@ -27,7 +28,6 @@
     "test:all": "npm --prefix packages/react run test && npm --prefix packages/angular run test",
     "test:angular": "npm --prefix packages/angular run test",
     "test:react": "npm --prefix packages/react run test",
-    "generate-icons": "npm --prefix packages/react run generate-icons && npm --prefix packages/angular run generate-icons",
     "prepare": "husky",
     "build:all": "npm --prefix packages/react run build && npm --prefix packages/angular run build"
   },
