--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -233,13 +233,23 @@ jobs:
       - name: Install dependencies
         run: npm ci --prefer-offline
 
-      - name: Generate changelog
-        run: npm run changelog
-
       - name: Create/Update Release Pull Request
+        id: changesets
         uses: changesets/action@v1.4.9
         with:
           title: "chore(release): update package versions"
           commit: "chore(release): update package versions"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Generate changelog
+        run: npm run changelog
+
+      - name: Commit changelog to PR
+        if: steps.changesets.outputs.pullRequestNumber
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add .
+          git commit -m "chore: update main changelog" --no-verify || exit 0
+          git push origin -u changeset-release/main
