chore: update Renovate config file for compliance with Devin's standards

--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,36 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:recommended"
+  "extends": ["config:recommended"],
+  "branchPrefix": "Renovate_",
+  "baseBranchPatterns": ["main"],
+  "prConcurrentLimit": 3,
+  "ignorePaths": [
+    "**/node_modules/**"
+  ],
+  "major": {
+    "packageRules": [
+      {
+        "enabled": false,
+        "matchPackageNames": [
+          "@angular/{/,}**",
+          "@angular-devkit/{/,}**"
+        ]
+      }
+    ]
+  },
+  "packageRules": [
+    {
+      "digest": {
+        "enabled": false
+      },
+      "matchPackageNames": ["*"]
+    },
+    {
+      "groupName": "angular",
+      "matchPackageNames": ["@angular/{/,}**", "@angular-devkit/{/,}**"]
+    },
+    {
+      "groupName": "react",
+      "matchPackageNames": ["react", "react-dom"]
+    }
   ]
 }
