--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["config:recommended"],
+  "extends": ["config:recommended", "schedule:nonOfficeHours"],
   "branchPrefix": "Renovate_",
   "baseBranchPatterns": ["main"],
   "prConcurrentLimit": 3,
